--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Qwez Portfolio</title>
     <style>
-        /* Общие стили */
         body {
             margin: 0;
             padding: 0;
@@ -16,7 +15,6 @@
             height: 100vh;
         }
 
-        /* Частицы */
         .particles {
             position: fixed;
             top: 0;
@@ -158,6 +156,9 @@
         }
         .github-logo {
           transform: scale(1.03);
+          width: 40px;
+          height: 40px;
+          object-fit: contain;
         }
         
         .telegram-logo {
@@ -284,7 +285,6 @@
 
         animateParticles();
 
-        // Переходы между разделами
         const links = document.querySelectorAll('.categories a');
         const contents = document.querySelectorAll('.frame-content');
 
@@ -296,5 +296,7 @@
             });
         });
     </script>
+</body>
+</html>
 </body>
 </html>
